--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <li><a href="#services">Service</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#plan">Plans</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     <!-- End Navigation  -->
@@ -73,11 +73,11 @@
             Surrounding Areas Get The Most Out Of Their Websites
           </p>
         </div>
-
+        <div class="service-center">
         <div class="columns margin-med service">
           <div class="column">
             <div class="img">
-              <img src="/images/icon-4.png" alt="" />
+              <img src="images/icon-4.png" alt="" />
               <p class="service-description">Web Design</p>
               <p class="service-description__para">
                 Websites we build for our clients are modern, attractive and
@@ -88,7 +88,7 @@
           </div>
           <div class="column">
             <div class="img">
-              <img src="/images/icon-5.png" alt="" />
+              <img src="images/icon-5.png" alt="" />
               <p class="service-description">SEO</p>
               <p class="service-description__para">
                 SEO is Search Engine Optimization. This is necessary for
@@ -99,7 +99,7 @@
           </div>
           <div class="column">
             <div class="img">
-              <img src="/images/icon-6.png" alt="" />
+              <img src="images/icon-6.png" alt="" />
               <p class="service-description">Web Development</p>
               <p class="service-description__para">
                 We build websites and applications using the latest technologies
@@ -110,7 +110,7 @@
           </div>
           <div class="column">
             <div class="img">
-              <img src="/images/icon-7.png" alt="" />
+              <img src="images/icon-7.png" alt="" />
               <p class="service-description">Brands</p>
               <p class="service-description__para">
                 We'll create a unique identity for your business, giving your
@@ -120,6 +120,7 @@
             </div>
           </div>
         </div>
+    </div>
       </div>
     </section>
 
@@ -140,10 +141,10 @@
             operate a successful business.
           </p>
         </div>
-        <div class="columns">
-            <div class="column">
+        <div class="columns about-center">
+            <div class="column " >
               <div class="about-img">
-                  <img src="/images/business-img.png" alt="">
+                  <img src="images/business-img.png" alt="">
               </div>
             </div>
             <div class="column">
@@ -185,8 +186,8 @@
               </p>
             </div>
 
-            <div class="columns">
-                <div class="column">
+            <div class="columns plan-center">
+                <div class="column ">
                   <div class="icons">
                     <i class="fas fa-globe"></i>
                     <h3>Hosting</h3>
@@ -241,7 +242,7 @@
                 </div>               
             </div>
             
-            <div class="columns">
+            <div class="columns plan-center">
                 <div class="column">
                     <div class="icons">
                         <i class="fas fa-map-marker-alt"></i>
@@ -310,48 +311,48 @@
               </p>
             </div>
 
-            <div class="columns ">
+            <div class="columns portfolio-center">
                 <div class="column">
                   <div class="portolio-img">
-                      <img src="/images/beauty redefined.png" alt="">
+                      <img src="images/beauty redefined.png" alt="">
                   </div>
                 </div>
                 <div class="column">
                     <div class="portolio-img">
-                        <img src="/images/mama mia.png" alt="">
+                        <img src="images/mama mia.png" alt="">
                     </div>
                 </div>
                 <div class="column">
                     <div class="portolio-img">
-                        <img src="/images/jmj construction.png" alt="">
+                        <img src="images/jmj construction.png" alt="">
                     </div>
                 </div>
                 <div class="column">
                     <div class="portolio-img">
-                        <img src="/images/dfs.png" alt="">
+                        <img src="images/dfs.png" alt="">
                     </div>
                 </div>
               </div>
 
-              <div class="columns">
+              <div class="columns portfolio-center">
                 <div class="column">
                   <div class="portolio-img">
-                      <img src="/images/fudge shop.png" alt="">
+                      <img src="images/fudge shop.png" alt="">
                   </div>
                 </div>
                 <div class="column">
                     <div class="portolio-img">
-                        <img src="/images/package manager.png" alt="">
+                        <img src="images/package manager.png" alt="">
                     </div>
                 </div>
                 <div class="column">
                     <div class="portolio-img">
-                        <img src="/images/a&l heating.png" alt="">
+                        <img src="images/a&l heating.png" alt="">
                     </div>
                 </div>
                 <div class="column">
                     <div class="portolio-img">
-                        <img src="/images/perry h law.png" alt="">
+                        <img src="images/perry h law.png" alt="">
                     </div>
                 </div>
               </div>
